fix the view of the data structure in trace player
